--- a/GazDinPro/Views/Home/Index.cshtml
+++ b/GazDinPro/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <section id="calculation" class="index-calculation">
     <div class="container">
-        <h2 class="index-calculation__title">Расчёт индексов верха и низа доменной плавки</h2>
+        <h2 class="index-calculation__title">Расчёт базового газодинамического режима доменной печи</h2>
         @if (ViewData["Variant"] != null)
         {
 <div class="index-calculation__head">
