--- a/GazDinPro/Views/Home/Inputs.cshtml
+++ b/GazDinPro/Views/Home/Inputs.cshtml
@@ -9,7 +9,7 @@
         </div>
         <div class="inputs-main__block">
             <div class="inputs-main__content content-inputs">
-                <h3 class="content-inputs__heading">Варианты исходных данных для расчета индексов верха и низа доменной плавки</h3>
+                <h3 class="content-inputs__heading">Варианты исходных данных для расчета базового режима доменной плавки</h3>
                 @if (Model.Count() == 0)
                 {
     <p>На данный момент вариантов исходных данных нет. Необходимо отправить форму для расчета на главной странице.</p> }
